<resources>
    <string name="app_name">NYCRatSightings</string>

    <string name="facebook_app_id">372778476479750</string>
    <string name="fb_login_protocol_scheme">fb372778476479750</string>
    <string name="twitter_consumer_key" translatable="false">HmQAf5LTsKDgNCnxwnULzlX7M</string>
    <string name="twitter_consumer_secret" translatable="false">7sakJt07SCIKJcOfooPjS7qrtwT75mHY1Z2dXSlmx2ltvnyYbB</string>
    <string name="fabric_api_key">cce05201b02256e06522dcafd0f7dbbbb1dd0dc7</string>

    <string name="login_button">Login</string>
    <string name="gitlogin_button">Login with Github</string>
    <string name="register_button">Register</string>
    <string name="sign_out">Sign Out</string>
    <string name="about">About</string>
    <string name="submit">Submit</string>

    <string name="about_content">
        Keeping track of one rat at a time.
        You're welcome, you can thank us later.
    </string>

    <string name="authors">
        Gerardo Prada,
        Mariam Marzouk,
        Alex Zhang,
        Lucas Liu,
        Benson Chau
    </string>

    <string name="passwd_txtview">Password</string>
    <string name="register_txtview">Register Here</string>
    <string name="email_txtview">Email</string>
    <string name="email_hint">Input email here.</string>
    <string name="passwd_hint">Input password here</string>
    <string name="standard">Standard</string>
    <string name="administrator">Administrator</string>
    <string name="user_type">User Type (Select One)</string>

    <string name="login_failed">Incorrect email/password.</string>
    <string name="register_failed">Failed to create account.</string>
    <string name="admin">Admin</string>
    <string name="title_activity_dashboard">Dashboard</string>

    <string name="sightings">Sightings</string>
    <string name="location">Location Type</string>
    <string name="date">Created Date</string>
    <string name="borough">Borough</string>

    <!--ADD NEW SIGHTING-->
    <string name="add_sighting">Add Sighting</string>
    <string name="add_sighting_button">Add</string>
    <string name="cancel_button">Cancel</string>
    <string name="invalid_lat_long">Incorrect format for latitute or longitude</string>

    <!--Google Maps-->
    <string name="title_activity_rat_map">RatMap</string>
    <string name="rat_range">Date range</string>

    <!-- Graphs -->
    <string name="title_graph">Graphs</string>
    <string name="empty_from_to">From and To dates cannot be empty</string>

    <string name="title_activity_about">AboutActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
