<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="56dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="Helvetica"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="36sp"
        android:id="@+id/textView2" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_button"
        android:textSize="18sp"
        android:clickable="true"
        android:onClick="onClickListener"
        android:layout_above="@+id/registerText"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="53dp" />

    <TextView
        android:id="@+id/registerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:text="@string/register_txtview"
        android:clickable="true"
        android:onClick="onClickListener"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="133dp" />

</RelativeLayout>