<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="cs2340.nycratsightings.controller.AboutActivity">

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:text="@string/about"
        android:textColor="#ffffff"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/about_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="false"
        android:layout_centerVertical="false"
        android:layout_marginHorizontal="10sp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/about_content"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="false"
        android:layout_centerVertical="false"
        android:layout_marginHorizontal="10sp"
        android:gravity="bottom|center_vertical|center_horizontal"
        android:paddingVertical="5dp"
        android:text="@string/authors"
        android:textColor="#ffffff"
        android:textSize="10sp"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

        </LinearLayout>
    </FrameLayout>

</RelativeLayout>
